refactor: rename project from simplecrmelectron to simplecrm and update appId
feat: enhance dashboard functionality with loading states and error handling

chore: remove unused test route from router

style: add application icon for Windows build

feat: implement dashboard service methods for fetching stats, recent customers, and upcoming tasks

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simplecrmelectron",
+  "name": "simplecrm",
   "version": "0.1.0",
   "private": true,
   "main": "dist-electron/main.js",
@@ -104,7 +104,7 @@
     "wait-on": "^8.0.3"
   },
   "build": {
-    "appId": "com.example.simplecrmelectron",
+    "appId": "com.zondiac.simplecrm",
     "productName": "SimpleCRM",
     "files": [
       "dist/",
@@ -117,7 +117,8 @@
       "output": "dist-build"
     },
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "icon": "src/app/simplecrmlogo.ico"
     },
     "nsis": {
       "oneClick": false,
