feat: Update deal metadata and notes to German language
- Translated deal information labels in DealMetadata component to German.
- Updated DealNotes title to German.
- Added new DealProductLink interface to link products to deals.
- Defined Customer interface for frontend usage with various fields.
- Implemented JTL order service to create orders with detailed error handling and logging.
- Introduced useDealProducts hook for managing deal products with API integration.
- Created centralized API error handler for consistent error messaging.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ next-env.d.ts
 /dist-build/
 /dist/
 /dist-electron/
+conversation_summary_jtl_feature_v2.md
+conversation_summary_jtl_feature_v3.md
+plan_order_creation.md
+Tables.md
+conversation_summary_jtl_feature.md
