--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
+    "electron-log": "^5.4.0",
     "electron-serve": "^2.1.1",
     "electron-store": "^8.1.0",
     "electron-window-state": "^5.0.3",
