--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
     "electron:dev": "npm run build:electron && concurrently \"cross-env NODE_ENV=development vite --port 5173 --host --clearScreen false\" \"wait-on -l -v tcp:5173 && electron dist-electron/main.js\"",
     "electron:build": "npm run build && npm run build:electron && cross-env DEBUG=electron-builder* NODE_ENV=production electron-builder",
     "electron:start": "cross-env NODE_ENV=production electron dist-electron/main.js",
-    "postinstall": "electron-rebuild"
+    "postinstall": "electron-rebuild",
+    "seed-db": "cross-env NODE_ENV=development ts-node --project scripts/tsconfig.json scripts/seed-database.ts",
+    "seed-db:test": "cross-env NODE_ENV=development ts-node --project scripts/tsconfig.json scripts/seed-database.ts --customers 100 --products 50 --yes",
+    "cleanup-db": "cross-env NODE_ENV=development ts-node --project scripts/tsconfig.json scripts/cleanup-database.ts",
+    "cleanup-db:dry": "cross-env NODE_ENV=development ts-node --project scripts/tsconfig.json scripts/cleanup-database.ts --dry-run",
+    "test:performance": "node scripts/performance-test-deals.js",
+    "test:performance:simple": "node scripts/performance-test-deals-simple.js",
+    "check:dangerous-defaults": "node scripts/check-dangerous-defaults.js",
+    "electron:dev:debug": "npm run build:electron && cross-env NODE_ENV=development electron dist-electron/main.js",
+    "electron:test:devtools": "npm run build && npm run build:electron && cross-env NODE_ENV=production electron dist-electron/main.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -54,7 +63,7 @@
     "@types/mssql": "^9.1.7",
     "@types/react-big-calendar": "^1.16.1",
     "autoprefixer": "^10.4.20",
-    "better-sqlite3": "^11.9.1",
+    "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -99,6 +108,7 @@
     "electron-rebuild": "^3.2.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^6.2.6",
     "vite-tsconfig-paths": "^5.1.4",
