--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplecrm",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "main": "dist-electron/main.js",
   "scripts": {
@@ -21,7 +21,12 @@
     "test:performance:simple": "node scripts/performance-test-deals-simple.js",
     "check:dangerous-defaults": "node scripts/check-dangerous-defaults.js",
     "electron:dev:debug": "npm run build:electron && cross-env NODE_ENV=development electron dist-electron/main.js",
-    "electron:test:devtools": "npm run build && npm run build:electron && cross-env NODE_ENV=production electron dist-electron/main.js"
+    "electron:test:devtools": "npm run build && npm run build:electron && cross-env NODE_ENV=production electron dist-electron/main.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:electron": "jest --testMatch='**/__tests__/electron/**/*.test.ts'",
+    "test:frontend": "jest --testMatch='**/__tests__/frontend/**/*.test.tsx'"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -101,6 +106,13 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.8",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "electron": "^35.1.5",
