feat: modularize electron ipc and link tasks to calendar

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ next-env.d.ts
 /dist-build/
 /dist/
 /dist-electron/
+# Generated type artifacts
+src/types/index.js
+src/types/index.js.map
 conversation_summary_jtl_feature_v2.md
 conversation_summary_jtl_feature_v3.md
 plan_order_creation.md
