--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:electron": "tsc -p tsconfig.electron.json && copy electron\\main.js dist-electron",
+    "build:watch": "tsc && vite build --watch",
+    "build:electron": "vite build",
+    "build:electron:watch": "vite build --watch",
+    "electron:dev:main": "nodemon --watch dist-electron --delay 500ms --exec \"cross-env NODE_ENV=development electron dist-electron/main.js\" --ext js",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "electron:dev": "npm run build:electron && concurrently \"cross-env NODE_ENV=development vite --port 5173 --host --clearScreen false\" \"wait-on -l -v tcp:5173 && electron dist-electron/main.js\"",
-    "electron:build": "npm run build && npm run build:electron && cross-env DEBUG=electron-builder* NODE_ENV=production electron-builder",
+    "electron:dev": "concurrently \"cross-env NODE_ENV=development vite build --watch\" \"npm run electron:dev:main\" \"cross-env NODE_ENV=development vite --port 5173 --host --clearScreen false\" --names \"Electron,ElectronMain,Vite\" --kill-others-on-exit",
+    "electron:build": "npm run build && vite build && cross-env DEBUG=electron-builder* NODE_ENV=production electron-builder",
     "electron:start": "cross-env NODE_ENV=production electron dist-electron/main.js",
     "postinstall": "electron-rebuild",
     "seed-db": "cross-env NODE_ENV=development ts-node --project scripts/tsconfig.json scripts/seed-database.ts",
@@ -32,6 +35,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@eslint/js": "^9.38.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -78,6 +82,7 @@
     "electron-store": "^8.1.0",
     "electron-window-state": "^5.0.3",
     "embla-carousel-react": "8.5.1",
+    "eslint": "^9.38.0",
     "input-otp": "1.4.1",
     "keytar": "^7.9.0",
     "knex": "^3.1.0",
@@ -96,33 +101,36 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "typescript-eslint": "^8.46.2",
     "vaul": "^0.9.6",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/user-event": "^14.5.1",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/jest": "^29.5.8",
     "@types/keytar": "^4.4.0",
     "@types/node": "^22.14.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.8",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.1.1",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "electron": "^35.1.5",
     "electron-builder": "^26.0.12",
     "electron-rebuild": "^3.2.9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "nodemon": "^3.1.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^6.2.6",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "vite-tsconfig-paths": "^5.1.4",
     "wait-on": "^8.0.3"
   },
