--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplecrm",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": true,
   "main": "dist-electron/main.js",
   "scripts": {
@@ -103,7 +103,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "^8.46.2",
     "vaul": "^0.9.6",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "electron-updater": "^6.3.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
@@ -147,6 +148,11 @@
       "buildResources": "assets",
       "output": "dist-build"
     },
+    "publish": [
+      {
+        "provider": "github"
+      }
+    ],
     "win": {
       "target": "nsis",
       "icon": "src/app/simplecrmlogo.ico"
